added css and py files from Step 5 Draft

--- a/FinalProject-git/localGym/templates/add_class.html
+++ b/FinalProject-git/localGym/templates/add_class.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Add a new class</title>
+  <link rel="stylesheet" href= "style.css" />
 </head>
 
 <form id="addclass" action="/add_class" method="post">
-  Class Name: <input type="text" name="class_name" /><br />
-  Class Date: <input type="date" name="class_date" /><br />
-  Class Time: <input type="time" name="class_time" /><br />
-  Room Number: <input type="number" name="room" />
+  Class Name: <input type="text" name="class_name" required/><br />
+  Class Date: <input type="date" name="class_date" required/><br />
+  Class Time: <input type="time" name="class_time" required/><br />
+  Room Number: <input type="number" name="room" required/>
   <input type="submit" value="Submit" />
 </form>
 
