--- a/FinalProject-git/localGym/templates/schedule_class.html
+++ b/FinalProject-git/localGym/templates/schedule_class.html
@@ -3,95 +3,12 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Schedule your class today!</title>
+    <link rel="stylesheet" href= "style.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
-<style>
 
-    .nav {
-        background-color: #333;
-        overflow: hidden;
-    }
-
-    .nav a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-    }
-
-    .nav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    .nav a.active {
-        background-color: #FF4500;
-        color: white;
-    }
-
-    .nav input[type=text] {
-        float: right;
-        padding: 6px;
-        border: none;
-        margin-top: 8px;
-        margin-right: 16px;
-        font-size: 17px;
-    }
-
-    input[type=text] {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        box-sizing: border-box;
-    }
-
-    button {
-        background-color: #FF4500;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-    }
-
-        button:hover {
-            opacity: 0.8;
-        }
-
-    #classschedule {
-        font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-        #classschedule td, #classschedule th {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-
-        #classschedule tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        #classschedule tr:hover {
-            background-color: #ddd;
-        }
-
-        #classschedule th {
-            padding-top: 12px;
-            padding-bottom: 12px;
-            text-align: left;
-            background-color: #FF4500;
-            color: white;
-        }
-</style>
 <body>
     <div id="navigationBar">
         <nav class="navbar justify-content-between">
